--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
 tower-http = { version = "0.6.6", features = ["cors"]  }
+urlencoding = "2.1"
