--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ JIRA_API_TOKEN="ATATT3xFfGF0sj2KSfnuutdVapP_fk-OZbVzN3yhrXwUo0Ezo9gkJGBhYwPitwBt
 JIRA_EMAIL="katariarohitashok@gmail.com"
 JIRA_ISSUE_TYPE_ID=10002
 JIRA_PROJECT_KEY="SCRUM"
+JIRA_STORYPOINT_CF="customfield_10016"
