added env variable for project URL

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ JIRA_EMAIL="katariarohitashok@gmail.com"
 JIRA_ISSUE_TYPE_ID=10002
 JIRA_PROJECT_KEY="SCRUM"
 JIRA_STORYPOINT_CF="customfield_10016"
+LOCALHOST_URL="http://localhost:3000"
